--- a/pleasant-bookstore/package.json
+++ b/pleasant-bookstore/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.5",
-    "nodemon": "^1.11.0",
+    "chai": "^3.5.0",
     "mocha": "^3.2.0",
-    "chai": "^3.5.0"
+    "nodemon": "^1.11.0",
+    "react-edit-inline": "^1.0.8",
+    "react-scripts": "0.9.5"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "express": "^4.15.2",
-    "lodash": "^4.17.4",
     "pg-promise": "^5.6.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0"
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start -- watch",
