--- a/bookstorepug/package.json
+++ b/bookstorepug/package.json
@@ -19,17 +19,22 @@
   },
   "homepage": "https://github.com/eobaah/pleasant-polecat#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "~1.16.0",
     "chai": "^3.5.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "express": "^4.14.1",
     "express-generator": "^4.14.1",
+    "express-session": "^1.15.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^6.1.2",
     "pg-promise": "^5.6.4",
