--- a/bookstorereact/package.json
+++ b/bookstorereact/package.json
@@ -10,9 +10,14 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.1",
     "express": "^4.15.2",
+    "express-session": "^1.15.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg-promise": "^5.6.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
