add flash page with new sign up flow

--- a/bookstorepug/package.json
+++ b/bookstorepug/package.json
@@ -41,5 +41,8 @@
     "postgresql": "*",
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
